--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
 	"description": "A library which provides extended functionality to WordPress custom post types, allowing developers to quickly build custom post types without having to write the same code again and again.",
 	"homepage"   : "https://github.com/johnbillion/extended-cpts/",
 	"license"    : "GPL-2.0+",
+	"type"       : "worpress-muplugin",
 	"authors"    : [
 		{
 			"name"    : "John Blackbourn",
@@ -28,8 +29,5 @@
 	"suggest": {
 		"johnbillion/extended-taxos": "Extended Taxonomies",
 		"wpackagist-plugin/rewrite-testing": "Rewrite Rule Testing"
-	},
-	"autoload": {
-		"files": ["extended-cpts.php"]
-	} 
+	}
 }
