--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 	"description": "A library which provides extended functionality to WordPress custom post types, allowing developers to quickly build custom post types without having to write the same code again and again.",
 	"homepage"   : "https://github.com/johnbillion/extended-cpts/",
 	"license"    : "GPL-2.0+",
-	"type"       : "worpress-muplugin",
+	"type"       : "wordpress-muplugin",
 	"authors"    : [
 		{
 			"name"    : "John Blackbourn",
